# data-analysis-template-python-poetry

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_data_exploration.ipynb  02_data_cleaning_transformation.ipynb  03_table_preparation.ipynb  04_database_population.ipynb
